jellyfinn/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfinn-service
  namespace: jellyfinn
spec:
  selector:
    app: jellyfinn
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
